refactored to use gradients and fixed to work

--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -10,4 +10,4 @@ website: info.dankpiss.art
 commands:
   rain: 
     description: "Let it rain!"
-    usage: /<command> [start|stop|cloud|heat|watch|ignore|config]
+    usage: /<command> [start|stop|cloud|watch|ignore|config]
